style/main.css
html {
  overflow: hidden;
}

body {
  background-image: url("../assets/background.png");
  background-size: 100vw 100vh;
}

h1 {
  font-family: "Monoton", cursive;
  color: white;
  padding-bottom: 10px;
  font-size: 48px;
  letter-spacing: 2px;
}

.title-board-links-wrapper {
  flex-direction: column;
  margin-top: 50px;
  padding: 0 20px;
}

main {
  display: flex;
  justify-content: center;
}

aside {
  color: white;
  font-size: 36px;
  font-family: "Roboto", sans-serif;
  height: 700px;
  justify-content: space-between;
}

.board {
  height: 600px;
  width: 300px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  background-color: darkolivegreen;
}

.links {
  margin-top: 20px;
  display: flex;
  font-size: 28px;
  justify-content: space-around;
  width: 200px;
}

.footer-text {
  color: white;
  font-family: "Roboto", sans-serif;
  letter-spacing: 1px;
  margin-bottom: 10px;
}

.footer-links {
  display: flex;
  justify-content: space-around;
  width: 75%;
  margin: 10px 0;
}

.footer-container {
  width: inherit;
}

.center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.directions {
  width: 200px;
  font-size: 16px;
  letter-spacing: 1px;
}

li {
  list-style: circle;
  padding: 15px 0;
}

.footer-links li {
  list-style: none;
}

.audio-controls {
  font-size: 50px;
}

.score-and-high-score-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.clickable {
  cursor: pointer;
}

.not-allowed {
  cursor: not-allowed;
}

